2009-11-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/TimedEvaluator.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Evaluation/AsyncEvaluationTracker.cs:
	  Properly dispose resources.

2009-11-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Debugging.csproj:
	* Mono.Debugging.Client/ObjectValue.cs:
	* Mono.Debugging.Client/ObjectValueFlags.cs:
	* Mono.Debugging.Evaluation/BaseBacktrace.cs:
	* Mono.Debugging.Client/EvaluationOptions.cs:
	* Mono.Debugging.Evaluation/ValueReference.cs:
	* Mono.Debugging.Evaluation/TimedEvaluator.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Evaluation/AsyncEvaluationTracker.cs:
	  Improved async evaluation. If an evaluation is in process,
	  don't even try to create an evaluation context, just queue
	  the request. Added more evaluation options. Added default
	  implementations for some methods (in ObjectValueAdaptor) and
	  classes (BaseBacktrace), factorized from the soft debugger.

2009-11-18  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/Backtrace.cs:
	* Mono.Debugging.Client/StackFrame.cs: Fix some serialization
	  issues.

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Improve
	  error message.

2009-11-18  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/Backtrace.cs: Add support for
	  refreshing object values.

	* Makefile.am:
	* Mono.Debugging.csproj:
	* Mono.Debugging.Client/StackFrame.cs:
	* Mono.Debugging.Backend/IBacktrace.cs:
	* Mono.Debugging.Client/ObjectValue.cs:
	* Mono.Debugging.Client/DebuggerSession.cs:
	* Mono.Debugging.Client/ObjectValueFlags.cs:
	* Mono.Debugging.Evaluation/RawViewSource.cs:
	* Mono.Debugging.Client/EvaluationOptions.cs:
	* Mono.Debugging.Evaluation/ValueReference.cs:
	* Mono.Debugging.Backend/IObjectValueSource.cs:
	* Mono.Debugging.Evaluation/ArrayElementGroup.cs:
	* Mono.Debugging.Evaluation/EvaluationContext.cs: